Fixed some button spacings for mobile etc

--- a/src/sass/_muifixes.scss
+++ b/src/sass/_muifixes.scss
@@ -17,3 +17,11 @@ form .column {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
 }
+
+
+// Bulma helper
+@media (max-width: 768px){
+  .is-hidden-mobile{
+    display: none !important;
+  }
+}
